src/test/ui/feature-gates/feature-gate-raw-dylib.rs
// only-windows
#[link(name = "foo", kind = "raw-dylib")]
//~^ ERROR: link kind `raw-dylib` is unstable
extern "C" {}

fn main() {}
